if S7000
SUBDIRS = 7000s
endif

if AZBOX
SUBDIRS = azboxme azboxhd azboxelite
endif

if CUBE
SUBDIRS = cube
endif

if DREAMBOX
SUBDIRS = dmm0 dmm1 dmm2
endif

if EBOX
SUBDIRS = ebox5000
endif

if ENFINITY
SUBDIRS = evo1
endif

if X2PLUS
SUBDIRS = evo2
endif

if XCOMBO
SUBDIRS = evo3
endif

if X1PLUS
SUBDIRS = evo3
endif

if BRE2ZE
SUBDIRS = wwio1
endif

if FORMULER
SUBDIRS = formuler1
endif

if FULAN
SUBDIRS = fulan
endif

if TRIPLEDOT
SUBDIRS = hdbox relook tyrant
endif

if VISIONNET
SUBDIRS = visionnet
endif

if XTREND
SUBDIRS = et4x00 et6x00 et6500 et8000 et9x00 et9500 et7x00
endif

if GIGABLUE
SUBDIRS = gb0 gb1
endif

if IQON
SUBDIRS = iqon1
endif

if ROXXS
SUBDIRS = iqon1
endif

if MEDIAART
SUBDIRS = iqon1
endif

if FORCE
SUBDIRS = iqon2
endif

if WORLDVISION
SUBDIRS = iqon2
endif

if JEPSSEN
SUBDIRS = mediabox
endif

if EDISION
SUBDIRS = optimuss1 optimuss2
endif

if IXUSSONE
SUBDIRS = ixussone
endif

if IXUSSZERO
SUBDIRS = ixusszero
endif

if IXUSSDUO
SUBDIRS = ixusszero
endif

if ODIN
SUBDIRS = odinm9 odinm7 odinm6 e3hd
endif

if HD2400
SUBDIRS = hd2400
endif

if HD1100
SUBDIRS = hd1100
endif

if TMTWINOE 
SUBDIRS = tm1
endif

if TM2TOE 
SUBDIRS = tm1
endif

if TMSINGLE
SUBDIRS = tm2
endif

if TMNANO
SUBDIRS = tm2
endif

if TMNANO2T
SUBDIRS = tm2
endif

if TMNANO2SUPER
SUBDIRS = tm2
endif

if TMNANO3T
SUBDIRS = tm2
endif

if TMNANOSE
SUBDIRS = tm3
endif

if VENTON
SUBDIRS = ini0 ini1 ini2
endif

if INI
SUBDIRS = ini0 ini1 ini2 ini3 ini4 ini5 ini6
endif

if MIRACLEBOX
SUBDIRS = ini3
endif

if XPEED
SUBDIRS = ini4
endif

if SEZAM
SUBDIRS = ini2 ini4
endif

if ATEMIO
SUBDIRS = ini4
endif

if BEYONWIZ
SUBDIRS = ini5
endif

if BWIDOW
SUBDIRS = ini6
endif

if VUSOLO
SUBDIRS = vu
endif

if VUSOLOSE
SUBDIRS = vu
endif

if VUSOLO2
SUBDIRS = vu
endif

if VUUNO
SUBDIRS = vu
endif

if VUDUO
SUBDIRS = vu
endif

if VUULTIMO
SUBDIRS = vu2
endif

if VUDUO2
SUBDIRS = vu3
endif

if VUZERO
SUBDIRS = vu
endif

if XP1000
SUBDIRS = xp1000
endif

if SOGNO
SUBDIRS = sogno
endif

if UNIBOXHDE
SUBDIRS = uniboxhde
endif

if AIRDIGITAL
SUBDIRS = zgemma
endif

