SUBDIRS =

if ALIEN
SUBDIRS += amiko3
endif

if AX51
SUBDIRS += ax51
endif

if AX60
SUBDIRS += ax51
endif

if AXULTRA
SUBDIRS += ax2
endif

if BEYONWIZU4
SUBDIRS += beyonwiz1
endif

if BEYONWIZV2
SUBDIRS += beyonwiz2
endif

if CC1
SUBDIRS += cc1
endif

if S7100
SUBDIRS += red1 red2
endif

if S7105
SUBDIRS += red1 red2
endif

if S7210
SUBDIRS += sf2x8
endif

if S7215
SUBDIRS += sf2x8
endif

if S7220
SUBDIRS += protek2
endif

if S7225
SUBDIRS += protek2
endif

if S7300
SUBDIRS += ax1
endif

if S7400
SUBDIRS += ax1
endif

if S8100
SUBDIRS += protek2
endif

if E4HD
SUBDIRS += e4hd e4hdcombo
endif

if ALPHATRIPLE
SUBDIRS += sab1
endif

if AZBOX
SUBDIRS += azboxme azboxhd azboxelite
endif

if CUBE
SUBDIRS += cube
endif

if BROADMEDIA
SUBDIRS += g300
endif

if SF5008
SUBDIRS += sf5008
endif

if SF4008
SUBDIRS += sf3038
endif

if SF8008
SUBDIRS += sf8008
endif

if SF3038
SUBDIRS += sf3038
endif

if SF128
SUBDIRS += sf3038
endif

if SF138
SUBDIRS += sf3038
endif

if SF98
SUBDIRS += sf98
endif

if DREAMBOX
SUBDIRS += dmm0 dmm1 dmm2
endif

if EBOX
SUBDIRS += ebox5000
endif

if ENFINITY
SUBDIRS += evo1
endif

if X2PLUS
SUBDIRS += evo2
endif

if XCOMBO
SUBDIRS += evo3
endif

if X1PLUS
SUBDIRS += evo3
endif

if T2CABLE
SUBDIRS += evo4
endif

if EVOMINI
SUBDIRS += evo5
endif

if EVOMINIPLUS
SUBDIRS += evo5
endif

if EVOSLIM
SUBDIRS += evo8
endif

if EVOSLIMSE
SUBDIRS += evo8
endif

if EVOSLIMT2C
SUBDIRS += evo8
endif

if BRE2ZE
SUBDIRS += wwio1
endif

if BRE2ZET2C
SUBDIRS += wwio1
endif

if BRE2ZE4K
SUBDIRS += wwio1
endif

if FORMULER
SUBDIRS += formuler1
endif

if FULAN
SUBDIRS += fulan
endif

if FUSIONHD
SUBDIRS += fusionhd
endif

if FUSIONHDSE
SUBDIRS += fusionhd
endif

if REVO4K
SUBDIRS += revo
endif

if GALAXY4K
SUBDIRS += revo
endif

if PUREHD
SUBDIRS += fusionhd
endif

if PUREHDSE
SUBDIRS += fusionhd
endif

if TRIPLEDOT
SUBDIRS += hdbox relook tyrant sf108
endif

if VISIONNET
SUBDIRS += visionnet
endif

if XTREND
SUBDIRS += et4x00 et6x00 et6500 et8000 et9x00 et9500 et7x00
endif

if ET7X00MINI
SUBDIRS += et7x00mini
endif

if GI11000
SUBDIRS += et7x00mini
endif

if GIGABLUE
SUBDIRS += gb0 gb1 gb2 gb3
endif

if IQON
SUBDIRS += iqon1
endif

if ROXXS
SUBDIRS += iqon1
endif

if MEDIAART
SUBDIRS += iqon1
endif

if FORCE
SUBDIRS += iqon1 iqon2 iqon3
endif

if WORLDVISION
SUBDIRS += iqon2
endif

if JEPSSEN
SUBDIRS += mediabox mediabox4k
endif

if LUNIX
SUBDIRS += qviart1 qviart2 qviart3
endif

if EDISION
SUBDIRS += optimuss1 optimuss2
endif

if IXUSSONE
SUBDIRS += ixussone
endif

if IXUSSZERO
SUBDIRS += ixusszero
endif

if IXUSSDUO
SUBDIRS += ixusszero
endif

if MEGASAT
SUBDIRS += megasat1 megasat2
endif

if ODIN
SUBDIRS += odinm9 odinm7 odinm6 e3hd
endif

if HD2400
SUBDIRS += hd2400
endif

if HD11
SUBDIRS += hd1100
endif

if HD1100
SUBDIRS += hd1100
endif

if HD1200
SUBDIRS += hd1100
endif

if HD1265
SUBDIRS += hd1100
endif

if HD1500
SUBDIRS += hd1100
endif

if HD500C
SUBDIRS += hd1100
endif

if HD530C
SUBDIRS += hd530c
endif

if MUTANT60
SUBDIRS += hd60
endif

if MUTANT61
SUBDIRS += hd60
endif

if MUTANT51
SUBDIRS += hd1100
endif

if BCM7251S
SUBDIRS += hd1100
endif

if VS1000
SUBDIRS += hd1100
endif

if VS1500
SUBDIRS += hd1100
endif

if PROTEK9900LX
SUBDIRS += protek1
endif

if TMTWINOE 
SUBDIRS += tm1
endif

if TM2TOE 
SUBDIRS += tm1
endif

if TMSINGLE
SUBDIRS += tm2
endif

if TMNANO
SUBDIRS += tm2
endif

if TMNANO2T
SUBDIRS += tm2
endif

if TMNANO2SUPER
SUBDIRS += tm2
endif

if TMNANO3T
SUBDIRS += tm2
endif

if TMNANOSE
SUBDIRS += tm3
endif

if TMNANOSEPLUS
SUBDIRS += tm4
endif

if TMNANOSECOMBO
SUBDIRS += tm3
endif

if TMNANOSEM2
SUBDIRS += tm4
endif

if TMNANOM3
SUBDIRS += tm5
endif

if TMTWIN4K 
SUBDIRS += tm6
endif

if TM4KSUPER 
SUBDIRS += tm6
endif

if TMNANOSEM2PLUS
SUBDIRS += tm4
endif

if TIVIAR
SUBDIRS += tiviar1 tiviar2
endif

if VENTON
SUBDIRS += ini0 ini1 ini2
endif

if INI
SUBDIRS += ini0 ini1 ini2 ini3 ini4 ini5 ini6 ini7 ini8
endif

if MIRACLEBOX
SUBDIRS += ini3 miraclebox
endif

if XPEED
SUBDIRS += ini4 gi1
endif

if SEZAM
SUBDIRS += ini2 ini4
endif

if ATEMIO
SUBDIRS += ini4
endif

if BEYONWIZ
SUBDIRS += ini5 ini7
endif

if BWIDOW
SUBDIRS += ini6
endif

if FEGASUS
SUBDIRS += ini6
endif

if VUSOLO
SUBDIRS += vu
endif

if VUSOLOSE
SUBDIRS += vu
endif

if VUSOLO2
SUBDIRS += vu
endif

if VUUNO
SUBDIRS += vu
endif

if VUDUO
SUBDIRS += vu
endif

if VUULTIMO
SUBDIRS += vu2
endif

if VUDUO2
SUBDIRS += vu3
endif

if VUZERO
SUBDIRS += vu
endif

if VUSOLO4K
SUBDIRS += vu
endif

if VUUNO4K
SUBDIRS += vu
endif

if VUUNO4KSE
SUBDIRS += vu4
endif

if VUZERO4K
SUBDIRS += vu4
endif

if VUDUO4K
SUBDIRS += vu4
endif

if VUULTIMO4K
SUBDIRS += vu
endif

if XCORE
SUBDIRS += xcore1 xcore2 xcore3
endif

if OSNINO
SUBDIRS += edision1
endif

if OSNINOPLUS
SUBDIRS += edision1
endif

if OSNINOPRO
SUBDIRS += edision2
endif

if OSMIO4K
SUBDIRS += edision3
endif

if XP1000
SUBDIRS += xp1000
endif

if SOGNO
SUBDIRS += sogno
endif

if UNIBOXHDE
SUBDIRS += uniboxhde
endif

if AIRDIGITAL
SUBDIRS += zgemma1 zgemma2 zgemma3 zgemma4 zgemma5 zgemma6 evo6 evo7
endif

if TRIPLEX
SUBDIRS += triplex
endif

if ULTRABOX
SUBDIRS += triplex
endif

if WETEK
SUBDIRS += wetek wetek2 wetek3
endif

if HARDKERNEL
SUBDIRS += hardkernel
endif

if VALALINUX
SUBDIRS += vala
endif

if VIPER
SUBDIRS += amiko1 amiko2
endif

if DINOBOT
SUBDIRS += dinobot
endif

if FERGUSON4K
SUBDIRS += dinobot
endif

if AXASHIS
SUBDIRS += axas1 axas2 axas3
endif

if ANADOL4K
SUBDIRS += anadol4k
endif

if USTYM4KPRO
SUBDIRS += uclan
endif

if ULTRAV8PLUS
SUBDIRS += maxytec1
endif

if ANADOLMULTI
SUBDIRS += maxytec1
endif

if MAXYTEMULTI
SUBDIRS += maxytec1
endif

if IZIBOXONE4K
SUBDIRS += izibox
endif

if HITUBE4K
SUBDIRS += hitube
endif
